--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>5.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.hp.hpl.jena</groupId>
+            <artifactId>jena</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 插件配置 -->
